(fix) web-client: fixed Preloader stuck due to incorrect integration with isAuthenticated state

--- a/web-client/src/assets/styles/index.css
+++ b/web-client/src/assets/styles/index.css
@@ -1300,66 +1300,64 @@ h2 {
 
 /*============================================================================================= course details */
 .course-view-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: #f0f4fc;
-  padding: 40px;
-  min-height: 100vh;
-  box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f0f4fc;
+    padding: 40px;
+    min-height: 100vh;
+    box-sizing: border-box;
 }
 
 .course-view-container h1 {
-  font-size: 2rem;
-  font-weight: bold;
-  margin-bottom: 0.5em;
-  color: #333;
+    font-size: 2rem;
+    font-weight: bold;
+    margin-bottom: 0.5em;
+    color: #333;
 }
 
 .course-view-container h2 {
-  font-size: 1.3rem;
-  color: #555;
-  margin-bottom: 2em;
-  font-weight: 500;
+    font-size: 1.3rem;
+    color: #555;
+    margin-bottom: 2em;
+    font-weight: 500;
 }
 
 .actions-grid1 {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
-  width: 100%;
-  max-width: 700px;
-  margin-top: 20px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    width: 100%;
+    max-width: 700px;
+    margin-top: 20px;
 }
 
-.action-button1{
-  background-color: #000;
-  color: #fff;
-  font-size: 1rem !important;
-  font-weight: 600;
-  padding: 15px 20px;
-  border: none;
-  border-radius: 8px;
-  cursor: pointer;
-  transition: background-color 0.3s, transform 0.3s;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  display: grid;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
+.action-button1 {
+    background-color: #000;
+    color: #fff;
+    font-size: 1rem !important;
+    font-weight: 600;
+    padding: 15px 20px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition:
+        background-color 0.3s,
+        transform 0.3s;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 
 .action-button1:hover {
-  background-color: #0056d2;
-  transform: translateY(-3px);
-  box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
+    background-color: #0056d2;
+    transform: translateY(-3px);
+    box-shadow: 0 8px 12px rgba(0, 0, 0, 0.2);
 }
 
 .action-button1:active {
-  transform: translateY(0);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transform: translateY(0);
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
-
-
-
-
